# actix-study

./: Cargo.toml  README.md  tmp.md
config/: config.toml
src/: api.rs  container.rs  create_app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/controllers/: mod.rs  room_handler.rs
src/api/dto/: room.rs
src/application/: session.rs
src/domain/: error.rs  mod.rs  session.rs
src/domain/models/: mod.rs  room.rs
src/domain/repositories/: mod.rs  repository.rs  room.rs
src/domain/services/: room.rs
src/infrastructure/: error.rs  mod.rs  session.rs
src/infrastructure/repositories/: room.rs
src/services/: room.rs
